--- a/bpt.ini
+++ b/bpt.ini
@@ -184,6 +184,15 @@ index_template =
         }},
         {{
            "name":"Adafruit ProxLight Trinkey"
+        }},
+        {{
+           "name":"Adafruit Pixel Trinkey"
+        }},
+        {{
+           "name":"Adafruit TRRS Trinkey"
+        }},
+        {{
+           "name":"Adafruit Thumbstick Trinkey"
         }}
      ],
      "toolsDependencies": [
